// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries .all() returns all of that model 1`] = `
Array [
  Person {
    "data": Object {
      "attributes": Object {
        "address": Object {
          "road": "123 Main St",
        },
        "first-name": "Dan",
        "last-name": "Gebhardt",
        "twitter": "dgeb",
      },
      "id": "9",
      "links": Object {
        "self": "http://example.com/people/9",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "5",
              "type": "comments",
            },
            Object {
              "id": "12",
              "type": "comments",
            },
          ],
        },
      },
      "type": "people",
    },
  },
  Person {
    "data": Object {
      "attributes": Object {
        "address": Object {
          "road": "A different Road",
        },
        "first-name": "Bob",
        "last-name": "Dyland",
        "twitter": "shredmaster",
      },
      "id": "14",
      "links": Object {
        "self": "http://example.com/people/14",
      },
      "type": "people",
    },
  },
]
`;

exports[`Queries .all() s selector returns an index reference 1`] = `Array []`;

exports[`Queries .all() s selector returns an index reference 2`] = `
Array [
  Person {
    "data": Object {
      "attributes": Object {
        "address": Object {
          "road": "123 Main St",
        },
        "first-name": "Dan",
        "last-name": "Gebhardt",
        "twitter": "dgeb",
      },
      "id": "9",
      "links": Object {
        "self": "http://example.com/people/9",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "5",
              "type": "comments",
            },
            Object {
              "id": "12",
              "type": "comments",
            },
          ],
        },
      },
      "type": "people",
    },
  },
  Person {
    "data": Object {
      "attributes": Object {
        "address": Object {
          "road": "A different Road",
        },
        "first-name": "Bob",
        "last-name": "Dyland",
        "twitter": "shredmaster",
      },
      "id": "14",
      "links": Object {
        "self": "http://example.com/people/14",
      },
      "type": "people",
    },
  },
]
`;

exports[`Queries .find() returns the record 1`] = `
Person {
  "data": Object {
    "attributes": Object {
      "address": Object {
        "road": "123 Main St",
      },
      "first-name": "Dan",
      "last-name": "Gebhardt",
      "twitter": "dgeb",
    },
    "id": "9",
    "links": Object {
      "self": "http://example.com/people/9",
    },
    "relationships": Object {
      "comments": Object {
        "data": Array [
          Object {
            "id": "5",
            "type": "comments",
          },
          Object {
            "id": "12",
            "type": "comments",
          },
        ],
      },
    },
    "type": "people",
  },
}
`;

exports[`Queries .find() s selector returns a single record 1`] = `
Person {
  "data": Object {
    "attributes": Object {
      "address": Object {
        "road": "123 Main St",
      },
      "first-name": "Dan",
      "last-name": "Gebhardt",
      "twitter": "dgeb",
    },
    "id": "9",
    "links": Object {
      "self": "http://example.com/people/9",
    },
    "relationships": Object {
      "comments": Object {
        "data": Array [
          Object {
            "id": "5",
            "type": "comments",
          },
          Object {
            "id": "12",
            "type": "comments",
          },
        ],
      },
    },
    "type": "people",
  },
}
`;

exports[`Queries .where() returns some of that model 1`] = `
Array [
  Person {
    "data": Object {
      "attributes": Object {
        "address": Object {
          "road": "123 Main St",
        },
        "first-name": "Dan",
        "last-name": "Gebhardt",
        "twitter": "dgeb",
      },
      "id": "9",
      "links": Object {
        "self": "http://example.com/people/9",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "5",
              "type": "comments",
            },
            Object {
              "id": "12",
              "type": "comments",
            },
          ],
        },
      },
      "type": "people",
    },
  },
]
`;

exports[`Queries .where() s selector returns an index reference 1`] = `Array []`;

exports[`Queries .where() s selector returns an index reference 2`] = `
Array [
  Person {
    "data": Object {
      "attributes": Object {
        "address": Object {
          "road": "123 Main St",
        },
        "first-name": "Dan",
        "last-name": "Gebhardt",
        "twitter": "dgeb",
      },
      "id": "9",
      "links": Object {
        "self": "http://example.com/people/9",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "5",
              "type": "comments",
            },
            Object {
              "id": "12",
              "type": "comments",
            },
          ],
        },
      },
      "type": "people",
    },
  },
]
`;
